3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Apply slightly modified patch #1293744 (Inversed ban entries) by Thomas
Equeter.
--
server/ban.c: In checkbanned() recognize '~' prefix to allow entries. Also fix
   possible buffer overflow.
Andreas Kirschbaum 2005-12-07

Apply modified patch #1293774 (Kick banned hosts at once) by Thomas Equeter:
disconnect new connection for banned host right after connecting. Also add
support for user name in ban files.
--
lib/ban_file: Update comments and examples to new syntax.
server/ban.c: Allow a NULL user name to check for host name only.
server/c_misc.c: In receive_player_password() check for banned user name.
server/player.c: In add_player() remove check for banned host - this was
   already done if we reach this state.
socket/init.c, include/sockproto.h: Pass ip address as a string.
socket/loop.c: In doeric_server() check for banned host after a new connection
   was accepted.
Andreas Kirschbaum 2005-12-07

Apply patch #1371956 (code cleanup patch) by Stefan Huehner: fix old-style
function declarations and prototypes to proper Ansi C syntax. This patch
allows the compiler to check function arguments and also removes some warnings
when compiling with -Wstrict-prototypes.
--
All affected files: Convert "void foo()" into "void foo(void)".
Andreas Kirschbaum 2005-12-06

Fix bug #1173563 (Creator created Bombs malfunction): Creators and Converters
now copy items from inventory. Fallback (for empty inventory) is the old
behavior to create the new item from other_arch. If the inventory contains more
than one item, a random one is picked.
--
common/loader.l: Mark inventory of CREATOR and CONVERTER as
   FLAG_CONTENT_ON_GEN.